--- a/src/FrmCekNomor.form
+++ b/src/FrmCekNomor.form
@@ -107,15 +107,14 @@
                   <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtAngka" alignment="3" pref="42" max="32767" attributes="0"/>
-                      <Group type="102" alignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="txtAngka" min="-2" pref="42" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
                           <EmptySpace min="17" pref="17" max="-2" attributes="0"/>
-                          <Component id="btnCek" pref="0" max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="3" attributes="0">
-                          <EmptySpace min="17" pref="17" max="-2" attributes="0"/>
-                          <Component id="btnKeluar" pref="0" max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="btnCek" alignment="0" pref="0" max="32767" attributes="0"/>
+                              <Component id="btnKeluar" alignment="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
